# homework6

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt
.github/: python-app.yml
.github/workflows/: python-app.yml
app/: input_parser.py  parser.py  plugin_base.py
app/plugins/: add.py  divide.py  multiply.py  subtract.py
tests/: conftest.py  test_input_parser.py  test_parser.py  test_plugin_add.py  test_plugin_base.py  test_plugin_divide.py  test_plugin_multiply.py  test_plugin_subtract.py
