[project]
name = "calculator"
version = "0.1.0"

[project.entry-points."calculator.plugins"]
add_plugin = "app.plugins.add:Add"
subtract_plugin = "app.plugins.subtract:Subtract"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pylint.'MESSAGES CONTROL']
disable = ["unnecessary-ellipsis", "unnecessary-pass"]
